CMF 1.5.1beta (unreleased)

  New Features

    - CMFSetup tool: Improved 'Properties' tab.
      The active site configuration can now be selected from a list of
      registered profiles and stored snapshots.
      (http://collector.zope.org/CMF/264)

    - CMFSetup: Added handlers for site properties.

    - CMFSetup utils: Added 'ConfiguratorBase' class.
      It's now recommended to use this class as base for all configurators.
      The class includes some generic methods to handle subobjects and
      properties.

    - FSObject: Now FSObject-derived items like FSImage or FSFile can have 
      security declarations inside the metadata file.
      (http://collector.zope.org/CMF/289)

    - profiles: Moved 'default' profile to CMFDefault.
      Using the new 'importVarious' handler this profile now allows to create
      CMF sites identical to those created with manage_addCMFSite. 

    - CMFDefault: Added 'importVarious' setup handler.
      This provisional handler will be removed again as soon as full handlers
      are implemented for these steps.

    - CachePolicyManager: You can now set a ETag using a TALES expression
      (http://collector.zope.org/CMF/236) 

    - RegistrationTool: The regular expression that limits what people
      can put in as a valid member ID is now configurable TTW in the
      portal_registration tool (http://collector.zope.org/CMF/117)

  Bug Fixes

    - CMFCore.PortalFolder: Cataloging portal folders was prevented by
      overriding the typical indexing calls, but one of them was forgotten,
      so they still got cataloged.  (http://www.zope.org/Collectors/CMF/309)

    - CMFCore.DirectoryView: A special __setattr__ on the
      DirectoryViewSurrogate class made sure to write changes through to the
      underlying DirectoryView, but there was no equivalent __delattr__
      cleanup. (http://www.zope.org/Collectors/CMF/316)

    - CMFDefault.RegistrationTool: Allow email addresses with an underscore