@@ -2,6 +2,11 @@ CMF 1.5.1beta (unreleased)
 
   New Features
 
+    - CMFSetup: Improved 'skip purge' behavior of the skins import handler.
+      If purging is disabled, it's now possible to modify existing skin
+      configurations. You can use '*' as wildcard for skin-path ids and a
+      'insert-before' attribute to specify where to insert a new layer.
+
     - CMFSetup tool: Improved 'Properties' tab.
       The active site configuration can now be selected from a list of
       registered profiles and stored snapshots.
